# it

./: Cargo.toml
it-client/: Cargo.toml
it-client/src/: animation.rs  main.rs  net.rs  player.rs
it-client/src/menu/: lobby.rs  mod.rs
it-core/: Cargo.toml
it-core/src/: lib.rs
it-server/: Cargo.toml
it-server/src/: client.rs  main.rs
